package org.truong.gvrp_entry_api.entity.enums;

public enum LocationType {
    DEPOT,
    ORDER
}