package org.truong.gvrp_entry_api.entity.enums;

public enum SolutionType {
    ENGINE_GENERATED,
    FILE_IMPORTED
}
