package org.truong.gvrp_entry_api.entity.enums;

public enum UserRole {
    PLANNER,
    CUSTOMER
}
