@startuml Entity_Layer_V2
!include 00_Styling.puml
skinparam shadowing false
skinparam classAttributeIconSize 0

package "Entity Layer" {

    class  Branch {
        - id: Long
        - name: String
    }

    class  VehicleType {
        - id: Long
        - typeName: String
        - vehicleFeatures: JSON/String
        - description: String
        - capacity: Integer
        - fixedCost: BigDecimal
        - costPerKm: BigDecimal
        - costPerHour: BigDecimal
        - maxDistance: BigDecimal
        - maxDuration: BigDecimal
    }

    class  Vehicle {
        - id: Long
        - vehicleLicensePlate: String
        - status: VehicleStatus
        --
        + isAvailable(): boolean
    }

    class  Fleet {
        - id: Long
        - fleetName: String
        --
        + getVehicleCount(): int
        + getAvailableVehicles(): List<Vehicle>
    }

    class  Depot {
        - id: Long
        - name: String
        - address: String
        - location: Point
    }

    class  Order {
        - id: Long
        - orderCode: String
        - customerName: String
        - address: String
        - location: Point
        - demand: Double
        - timeWindowStart: LocalTime
        - timeWindowEnd: LocalTime
        - status: OrderStatus
    }

    class  OptimizationJob {
        - id: Long
        - status: JobStatus
        - createdAt: LocalDateTime
        - startedAt: LocalDateTime
        - completedAt: LocalDateTime
        - cancelledAt: LocalDateTime
        - inputData: String
        - errorMessage: String
        - externalJobId: String
    }

    class  Solution {
        - id: Long
        - status: SolutionStatus
        - type: SolutionType
        - totalCost: BigDecimal
        - totalDistance: BigDecimal
        - totalCO2: BigDecimal
        - totalTime: BigDecimal
        - totalVehiclesUsed: Integer
        - servedOrders: Integer
        - unservedOrders: Integer
        - errorMessage: String
    }

    class  Route {
        - id: Long
        - routeOrder: Integer
        - distance: BigDecimal
        - co2Emission: BigDecimal
        - serviceTime: BigDecimal
        - orderCount: Integer
        - loadUtilization: BigDecimal
        --
        + getEstimatedStartTime(): LocalTime
        + getEstimatedEndTime(): LocalTime
        + isOverloaded(): boolean
    }

    class  RouteStop {
        - id: Long
        - sequenceNumber: Integer
        - type: LocationType
        - locationId: String
        - locationName: String
        - location: Point
        - arrivalTime: LocalTime
        - departureTime: LocalTime
        - serviceTime: BigDecimal
        - waitTime: BigDecimal
        - demand: BigDecimal
        - loadAfter: BigDecimal
        - distanceToNext: BigDecimal
        - timeToNext: BigDecimal
        --
        + isDepot(): boolean
        + isCustomer(): boolean
        + getLoadBefore(): BigDecimal
    }

    class  User {
        - id: Long
        - username: String
        - password: String
        - email: String
        - full_name: String
        - role: UserRole
        - enabled: boolean
    }

    enum OrderStatus {
        SCHEDULED
        ON_ROUTE
        SERVICING
        COMPLETED
        FAILED
        REJECTED
    }

    enum SolutionStatus {
        FEASIBLE
        INFEASIBLE
        OPTIMIZED
    }

    enum SolutionType {
        ENGINE_GENERATED
        FILE_IMPORTED
    }

    enum LocationType {
        DEPOT
        ORDER
    }

    enum UserRole {
        PLANNER
        CUSTOMER
    }
}

' ============================================
' RELATIONSHIPS
' ============================================
Branch "1" *-- "*" User : owns
Branch "1" *-- "*" VehicleType
Branch "1" *-- "*" Fleet
Branch "1" *-- "*" Depot
Branch "1" *-- "*" Order
Branch "1" *-- "*" Solution
Branch "1" *-- "*" OptimizationJob

' Fleet & Vehicle
Fleet "1" *-- "*" Vehicle : "fleet_id"
VehicleType "1" <-- "*" Vehicle : "vehicle_type_id"
Vehicle "*" --> "1" Depot : "start_depot_id"
Vehicle "*" --> "1" Depot : "end_depot_id"

' Solution & Job (One-to-One)
OptimizationJob "1" -- "1" Solution : "job_id"
OptimizationJob "*" --> "1" User : submitted by

' Solution -> Route -> RouteStop
Solution "1" *-- "*" Route : "solution_id"
Route "1" *-- "*" RouteStop : "segments"
Route "*" --> "1" Vehicle : "vehicle_id"

' Stop -> Order
RouteStop "*" --> "0..1" Order : "order_id"

@enduml